# fay_cli

./: .gitignore  Cargo.toml  LICENSE  README.md  cmderdata.json
src/: main.rs
