[package]
name = "fay"
description = "A simple cross platform CLI app written in Rust to automate multiple shell ( bash or cmd ) commands"
version = "0.1.4"
edition = "2021"
license = "MIT"
homepage = "https://github.com/p32929/fay_cli"
readme = "README.md"
keywords = [
    "shell",
    "bash",
    "cli",
    "automation",
    "simple",
]
categories = [
    "accessibility",
    "command-line-interface"
]
exclude = [".vscode/*"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
